# Lighthouse

./: .clang-format  .gitignore  KMSData.xml  LICENSE  README.md  format.sh
client/: Form1.Designer.cs  Form1.cs  KMSHost.Designer.cs  KMSHost.cs  Lighthouse.Designer.cs  Lighthouse.cs  Lighthouse.resx  Program.cs  client.csproj  client.sln  package-lock.json  package.json  tsconfig.json  webpack.main.config.ts
client/Utilities/: Run.cs  Windows.cs
client/public/: electron.js
client/src/: app.tsx  helpers.ts  index.css  index.html  index.ts  preload.ts  renderer.ts  theme.ts
client/src/components/: activation_button.tsx  activation_detail.tsx  main.tsx
client/src/helpers/: activation.ts
core/: CMakeLists.txt  Dockerfile
core/src/: core.cpp  core.hpp  main.cpp
core/src/database/: database.cpp  database.hpp
core/src/kms/: crypto.cpp  crypto.hpp  hmac.cpp  hmac.hpp  request.cpp  request.hpp  response.cpp  response.hpp  sha256.cpp  sha256.hpp  winapi_types.cpp  winapi_types.hpp
core/src/rpc/: control.cpp  control.hpp  pdus.hpp  presentation.hpp  primitives.hpp
core/src/rpc/ndr/: pdus.hpp  uuid.hpp
core/src/rpc/pdu/: bind.cpp  bind.hpp  bind_ack.cpp  bind_ack.hpp  bindack.hpp  request.cpp  request.hpp  response.cpp  response.hpp  shared.hpp  types.hpp
desktop/: CMakeLists.txt
desktop/src/: desktop.cpp
desktop/src/gui/: application.cpp  application.hpp
desktop/webapp/: package-lock.json  package.json  svelte.config.js
desktop/webapp/src/routes/: +layout.server.ts  +page.svelte
server/: .eslintrc.json  package-lock.json  package.json  webpack.rules.js
server-core/: CMakeLists.txt
server-core/src/: core.cpp  core.hpp  interface.cpp  interface.hpp  main.cpp  ndr-test.cpp  server-core.cpp  server-core.hpp
server-core/src/KMS/: crypto.hpp  hmac.hpp  request.cpp  request.hpp  response.hpp  sha256.hpp  winapi_types.hpp
server-core/src/RPC/: PDUs.hpp  control.cpp  control.hpp  presentation.hpp  primitives.hpp  uuid.hpp
server-core/src/RPC/NDR/: PDUs.hpp  primitives.hpp  uuid.hpp
server-core/src/RPC/PDU/: bind.cpp  bind.hpp  bind_ack.hpp  bindack.hpp  request.hpp  response.cpp  response.hpp  shared.hpp  type.hpp
server-core/src/base64/: wchar.cpp  wchar.hpp
server-core/src/database/: database.cpp  database.hpp
server-core/src/interface/: interface.cpp  interface.hpp
server-core/src/kms/: crypto.cpp  crypto.hpp  hmac.cpp  hmac.hpp  request.cpp  request.hpp  response.cpp  response.hpp  sha256.cpp  sha256.hpp  winapi_types.cpp  winapi_types.hpp
server-core/src/rpc/: control.cpp  control.hpp  uuid.hpp
server-core/src/rpc/pdu/: bind.cpp  bind.hpp  bind_ack.cpp  bind_ack.hpp  request.cpp  request.hpp  response.cpp  response.hpp  shared.hpp
server/src/: app.jsx  index.css  index.html  main.js  messaging.js  preload.js  renderer.js
server/src/components/: interface.jsx  list.jsx
